<resources>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        android.support.design.widget.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="app_name">Voyage</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="start_prompt">Choose your Start point</string>
    <string name="destination_prompt">Choose your Destination</string>
    <string name="lbl_start_point">Start point</string>
    <string name="lbl_end_point">End point</string>
    <string name="choose_date">Choose date…</string>
    <string name="departure_time">Departure time</string>
    <string name="btn_submit">Submit</string>

    <string-array name="city_points">
        <item>Nairobi</item>
        <item>Naivasha</item>
        <item>Kisumu</item>
        <item>Nakuru</item>
        <item>Mombasa</item>
    </string-array>

    <string name="cancel_button">Cancel</string>
    <string name="next_button">Next</string>
    <string name="error_password">Password must contain at least 8 characters</string>
    <string name="instruction">Please choose your stat point and your destination below</string>
    <string name="search_info">Search for a bus</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">E-Mail Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_register">register</string>
    <string name="log_in">Log in</string>
    <string name="error_email">Invalid Email</string>
    <string name="error_name">Invalid name</string>
    <string name="error_password_confirm">Passwords don\'t match</string>
    <string name="preference_file_key">com.example.voyage.PREFERENCE_FILE_KEY</string>
    <string name="user_token_key">USER_TOKEN</string>
    <string name="destination">Destination</string>
    <string name="select_date" translatable="false">Select Date</string>
    <string name="search_buses" translatable="false">Search Buses</string>
    <string name="available_seat_drawable">Available Seat drawable</string>
    <string name="booked_seat_drawable">Booked Seat drawable</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="phone_number_ke_format">+254</string>
    <string name="pay_page_trip_label">Trip:</string>
    <string name="pay_page_pay_btn">Pay</string>
    <string name="pay_page_cancel_btn">Cancel</string>
    <string name="pay_page_payment_statement">Payment made easy through M-Pesa</string>
    <string name="pay_page_departure_label">Departure:</string>
    <string name="pay_page_total_price_label">Total Price:</string>
    <string name="back_button_description">Back button</string>
    <string name="cancel_payment_dialog_title">Cancel Payment</string>
    <string name="cancel_payment_confirmation_dialog">Are you sure you want to cancel payment?</string>
    <string name="bus_stop_image">Bus stop image</string>
    <string name="your_seat">Your Seat</string>
    <string name="available">Available</string>
    <string name="hey_traveller">Hey Traveller!</string>
    <string name="booked">Booked</string>
    <string name="hey_traveller_greeting">Hey Traveller!</string>
    <string name="where_you_want_to_go">Where do you want to go ?</string>
    <string name="from">From</string>
    <string name="select_your_bus">chagua basi yako</string>
    <string name="available_bus_call_to_action_text_view">select your bus</string>
    <string name="no_trips_found">No Trips Found with those values</string>
    <string name="open_nav_drawer">open drawer</string>
    <string name="close_nav_drawer">close drawer</string>
    <string name="please_book_your_bus_now">Please, Book Your Bus Now!</string>
    <string name="sign_out_button_content_description">sign out button</string>
    <string name="person_outline_image_content_description">person outline image</string>
    <string name="greeting">Hello, %1s!</string>
    <string name="no_bookings_found">No bookings made yet</string>
    <string name="voyage_channel_name">Voyage bookings</string>
    <string name="voyage_channel_description">Voyage new bookings notifications</string>

</resources>
