<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePageFragment">

    <!--<android.support.design.widget.AppBarLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/app_bar"-->
    <!--style="@style/Widget.Shrine.Toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="?attr/actionBarSize"-->
    <!--app:navigationIcon="@drawable/shr_menu"-->
    <!--app:title="@string/shr_app_name" />-->
    <!--</android.support.design.widget.AppBarLayout>-->

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/nav_menu"
            app:titleTextColor="@color/icons"
            app:title="@string/app_name" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:id="@+id/pickerPanel">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_start_point"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/start_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/city_points"
            android:prompt="@string/start_prompt"
            android:layout_marginBottom="16dp">

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_end_point"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/destination_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/city_points"
            android:prompt="@string/destination_prompt"
            android:layout_marginBottom="16dp">

        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/departure_time"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/departure_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showDatePickerDialog"
            android:text="@string/choose_date"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_submit"/>

    </LinearLayout>
</RelativeLayout>
