<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <!--<ImageView-->
        <!--android:layout_width="64dp"-->
        <!--android:layout_height="64dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginTop="48dp"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--app:srcCompat="@drawable/logo" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailAddress_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/hint_username">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailAddress_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_user"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_lock"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/log_in" />

            <android.support.design.button.MaterialButton
                android:id="@+id/register_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_toStartOf="@id/login_button"
                android:text="@string/register" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
