<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.searchbus.SearchBusActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_collapseMode="pin">

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-16dp">

                <RelativeLayout
                    android:id="@+id/image_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bus_image_2" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/print_clearly"
                        android:text="@string/hey_traveller_greeting"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/gotham"
                        android:text="@string/please_book_your_bus_now"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp" />



                </RelativeLayout>
            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="-44dp"
                android:layout_marginRight="8dp"
                app:cardCornerRadius="8dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/destination"
                        android:textAllCaps="true"
                        android:textSize="12sp"
                        android:textColor="@color/accent"/>


                    <Spinner
                        android:id="@+id/destinationSpinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        android:dropDownWidth="match_parent"
                        android:gravity="center"
                        android:layout_margin="16dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/from"
                        android:textAllCaps="true"
                        android:textSize="12sp"
                        android:textColor="@color/accent"/>


                    <Spinner
                        android:id="@+id/originSpinner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"
                        android:dropDownWidth="match_parent"
                        android:gravity="center"
                        android:layout_margin="16dp"/>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/select_date_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:hint="@string/select_date"
                        android:textColorHint="#FF8A99AF">

                        <EditText
                            android:id="@+id/select_date"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clickable="true"
                            android:drawableStart="@drawable/ic_date_range_light_blue_24dp"
                            android:drawablePadding="16dp"
                            android:focusableInTouchMode="false"
                            android:fontFamily="@font/calibri"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.button.MaterialButton
                        android:id="@+id/search_buses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="16dp"
                        android:background="@drawable/buttonshape"
                        android:fontFamily="@font/calibri"
                        android:text="@string/search_buses"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>