<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pickseat.PickSeatActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/book_seat_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/back_button_description"
                android:padding="12dp"
                android:src="@drawable/ic_arrow_back_white_24dp" />


            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center" />


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-16dp">

            <ProgressBar
                android:id="@+id/pick_seat_activity_indeterminate_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />


            <RelativeLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bus_image_3" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:contentDescription="@string/bus_stop_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bus_image_1" />


            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/seat_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_layout"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="-36dp"
                android:layout_marginRight="8dp"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="8dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/legend_linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="100">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="33.3"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/booked_img" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/booked"
                                android:textAlignment="center"
                                android:textColor="#b2b2b2" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="33.3"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/available_img" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/available"
                                android:textAlignment="center"
                                android:textColor="#b2b2b2" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="33.3"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:layout_marginEnd="4dp"
                                android:src="@drawable/your_seat_img" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/calibri"
                                android:text="@string/your_seat"
                                android:textAlignment="center"
                                android:textColor="#b2b2b2" />
                        </LinearLayout>

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_seats"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/legend_linear_layout" />
                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/seat_card_view">

                <Button
                    android:id="@+id/proceed_to_payment_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/buttonshape"
                    android:fontFamily="@font/calibri"
                    android:text="@string/proceed_to_payment"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>